# changai

./: README.md  pyproject.toml
changai/changai/api/v1/: prediction_pipeline_v1.py
changai/changai/api/v2/: build_cards_faiss_index_v2.py  clients.py  non_erp_handler.py  operations.py  schema_utils.py  text2sql_pipeline_v2.py
changai/changai/api/v2/fvs_stores/erpnext/emb_dir/: field_docs.pkl  table_to_idx.pkl
changai/changai/api/v2/fvs_stores/erpnext/table_fvs/: index.faiss
changai/changai/doctype/changai_settings/: changai_settings.js  changai_settings.json
changai/changai/prompts/: sql_system_prompt.txt
frontend/src/: App.vue
frontend/src/components/: ChatbotPopup.vue
frontend/src/utils/: frappe.js
