[project]
name = "changai"
authors = [
    { name = "ERpGulf", email = "support@erpgulf.com"}
]
description = "ChangAI"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "cffi>=1.17.1",
    "openai>=1.64.0,<2.0.0",
    "anthropic>=0.79.0,<1.0.0",
    "google-genai>=1.60.0,<2.0.0",
    "google-auth>=2.38.0,<2.49.0",
    "google-cloud-aiplatform>=1.135.0,<2.0.0",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langgraph",
    "symspellpy>=6.7.7,<7.0.0",
    "transformers>=4.49.0,<5.0.0",
    "sentence-transformers>=5.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "numpy>=1.22.0",
    "sqlglot>=27.0.0",
    "boto3>=1.34.0",
    "PyQRCode>=1.2.1",
    "pypng>=0.20220715.0",
    "opencv-python-headless>=4.8.0,<5.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.bench.frappe-dependencies]
    frappe = ">=15.0.0,<=17.0.0-dev"

[deploy.dependencies.apt]
packages = [
  "libffi-dev",
  "pkg-config",
  "build-essential",
  "python3-dev",
  "libopenblas-dev",
  "libgl1",
  "libglib2.0-0"
]